--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -134,72 +134,72 @@
       <DependentUpon>FoodProductsModel.edmx</DependentUpon>
       <LastGenOutput>FoodProductsModel.cs</LastGenOutput>
     </Content>
-    <Content Include="photo\dessert\B1.jpg" />
-    <Content Include="photo\dessert\B10.jpg" />
-    <Content Include="photo\dessert\B11.jpg" />
-    <Content Include="photo\dessert\B12.jpg" />
-    <Content Include="photo\dessert\B2.jpg" />
-    <Content Include="photo\dessert\B3.jpg" />
-    <Content Include="photo\dessert\B4.jpg" />
-    <Content Include="photo\dessert\B5.jpg" />
-    <Content Include="photo\dessert\B6.jpg" />
-    <Content Include="photo\dessert\B7.jpg" />
-    <Content Include="photo\dessert\B8.jpg" />
-    <Content Include="photo\dessert\B9.jpg" />
-    <Content Include="photo\drinksoup\A1.jpg" />
-    <Content Include="photo\drinksoup\A10.jpg" />
-    <Content Include="photo\drinksoup\A11.jpg" />
-    <Content Include="photo\drinksoup\A12.jpg" />
-    <Content Include="photo\drinksoup\A2.jpg" />
-    <Content Include="photo\drinksoup\A3.jpg" />
-    <Content Include="photo\drinksoup\A4.jpg" />
-    <Content Include="photo\drinksoup\A5.jpg" />
-    <Content Include="photo\drinksoup\A6.jpg" />
-    <Content Include="photo\drinksoup\A7.jpg" />
-    <Content Include="photo\drinksoup\A8.jpg" />
-    <Content Include="photo\drinksoup\A9.jpg" />
-    <Content Include="photo\fastfood\E1.jpg" />
-    <Content Include="photo\fastfood\E10.jpg" />
-    <Content Include="photo\fastfood\E11.jpg" />
-    <Content Include="photo\fastfood\E12.jpg" />
-    <Content Include="photo\fastfood\E13.jpg" />
-    <Content Include="photo\fastfood\E2.jpg" />
-    <Content Include="photo\fastfood\E3.jpg" />
-    <Content Include="photo\fastfood\E4.jpg" />
-    <Content Include="photo\fastfood\E5.jpg" />
-    <Content Include="photo\fastfood\E6.jpg" />
-    <Content Include="photo\fastfood\E7.jpg" />
-    <Content Include="photo\fastfood\E8.jpg" />
-    <Content Include="photo\fastfood\E9.jpg" />
-    <Content Include="photo\noodle\C1.jpg" />
-    <Content Include="photo\noodle\C10.jpg" />
-    <Content Include="photo\noodle\C11.jpg" />
-    <Content Include="photo\noodle\C12.jpg" />
-    <Content Include="photo\noodle\C2.jpg" />
-    <Content Include="photo\noodle\C3.jpg" />
-    <Content Include="photo\noodle\C4.jpg" />
-    <Content Include="photo\noodle\C5.jpg" />
-    <Content Include="photo\noodle\C6.jpg" />
-    <Content Include="photo\noodle\C7.jpg" />
-    <Content Include="photo\noodle\C8.jpg" />
-    <Content Include="photo\noodle\C9.jpg" />
+    <Content Include="photo\B1.jpg" />
+    <Content Include="photo\B10.jpg" />
+    <Content Include="photo\B11.jpg" />
+    <Content Include="photo\B12.jpg" />
+    <Content Include="photo\B2.jpg" />
+    <Content Include="photo\B3.jpg" />
+    <Content Include="photo\B4.jpg" />
+    <Content Include="photo\B5.jpg" />
+    <Content Include="photo\B6.jpg" />
+    <Content Include="photo\B7.jpg" />
+    <Content Include="photo\B8.jpg" />
+    <Content Include="photo\B9.jpg" />
+    <Content Include="photo\A1.jpg" />
+    <Content Include="photo\A10.jpg" />
+    <Content Include="photo\A11.jpg" />
+    <Content Include="photo\A12.jpg" />
+    <Content Include="photo\A2.jpg" />
+    <Content Include="photo\A3.jpg" />
+    <Content Include="photo\A4.jpg" />
+    <Content Include="photo\A5.jpg" />
+    <Content Include="photo\A6.jpg" />
+    <Content Include="photo\A7.jpg" />
+    <Content Include="photo\A8.jpg" />
+    <Content Include="photo\A9.jpg" />
+    <Content Include="photo\E1.jpg" />
+    <Content Include="photo\E10.jpg" />
+    <Content Include="photo\E11.jpg" />
+    <Content Include="photo\E12.jpg" />
+    <Content Include="photo\E13.jpg" />
+    <Content Include="photo\E2.jpg" />
+    <Content Include="photo\E3.jpg" />
+    <Content Include="photo\E4.jpg" />
+    <Content Include="photo\E5.jpg" />
+    <Content Include="photo\E6.jpg" />
+    <Content Include="photo\E7.jpg" />
+    <Content Include="photo\E8.jpg" />
+    <Content Include="photo\E9.jpg" />
+    <Content Include="photo\C1.jpg" />
+    <Content Include="photo\C10.jpg" />
+    <Content Include="photo\C11.jpg" />
+    <Content Include="photo\C12.jpg" />
+    <Content Include="photo\C2.jpg" />
+    <Content Include="photo\C3.jpg" />
+    <Content Include="photo\C4.jpg" />
+    <Content Include="photo\C5.jpg" />
+    <Content Include="photo\C6.jpg" />
+    <Content Include="photo\C7.jpg" />
+    <Content Include="photo\C8.jpg" />
+    <Content Include="photo\C9.jpg" />
     <Content Include="photo\productsindex\d10_resized.jpg" />
     <Content Include="photo\productsindex\dessert_resized.jpg" />
     <Content Include="photo\productsindex\fast-food_resized.jpg" />
     <Content Include="photo\productsindex\n1_resized.jpg" />
     <Content Include="photo\productsindex\r5_resized.jpg" />
-    <Content Include="photo\rice\D1.jpg" />
-    <Content Include="photo\rice\D10.jpg" />
-    <Content Include="photo\rice\D11.jpg" />
-    <Content Include="photo\rice\D12.jpg" />
-    <Content Include="photo\rice\D2.jpg" />
-    <Content Include="photo\rice\D3.jpg" />
-    <Content Include="photo\rice\D4.jpg" />
-    <Content Include="photo\rice\D5.jpg" />
-    <Content Include="photo\rice\D6.jpg" />
-    <Content Include="photo\rice\D7.jpg" />
-    <Content Include="photo\rice\D8.jpg" />
-    <Content Include="photo\rice\D9.jpg" />
+    <Content Include="photo\D1.jpg" />
+    <Content Include="photo\D10.jpg" />
+    <Content Include="photo\D11.jpg" />
+    <Content Include="photo\D12.jpg" />
+    <Content Include="photo\D2.jpg" />
+    <Content Include="photo\D3.jpg" />
+    <Content Include="photo\D4.jpg" />
+    <Content Include="photo\D5.jpg" />
+    <Content Include="photo\D6.jpg" />
+    <Content Include="photo\D7.jpg" />
+    <Content Include="photo\D8.jpg" />
+    <Content Include="photo\D9.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\FoodProductsModel.edmx">
@@ -284,6 +284,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="photo\dessert\" />
+    <Folder Include="photo\drinksoup\" />
+    <Folder Include="photo\fastfood\" />
+    <Folder Include="photo\noodle\" />
+    <Folder Include="photo\rice\" />
     <Folder Include="picture\" />
     <Folder Include="startbootstrap-sb-admin-gh-pages\" />
   </ItemGroup>
