--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -264,6 +264,7 @@
     <Content Include="Views\Member\MemberTable.cshtml" />
     <Content Include="Views\_Member_Home_LayoutPage1.cshtml" />
     <Content Include="Views\Member\EasyRegister.cshtml" />
+    <Content Include="Views\Member\OrderCard.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
