HTML Responsive Web Design
updata Edit

--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -183,6 +183,7 @@
     <Content Include="photo\C7.jpg" />
     <Content Include="photo\C8.jpg" />
     <Content Include="photo\C9.jpg" />
+    <Content Include="photo\productsindex\1213454654.png" />
     <Content Include="photo\productsindex\d10_resized.jpg" />
     <Content Include="photo\productsindex\dessert_resized.jpg" />
     <Content Include="photo\productsindex\fast-food_resized.jpg" />
