--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -148,6 +148,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="setup_database_eeeviq.txt" />
+    <Content Include="text.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
