--- a/task03_0606/Web.config
+++ b/task03_0606/Web.config
@@ -41,9 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="task03LabEntities" connectionString="metadata=res://*/Models.task03LabModel.csdl|res://*/Models.task03LabModel.ssdl|res://*/Models.task03LabModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.6.73;initial catalog=task03Lab;user id=labUser;password=lab123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="FoodCourtDBEntities" connectionString="metadata=res://*/Models.FoodStreetModel.csdl|res://*/Models.FoodStreetModel.ssdl|res://*/Models.FoodStreetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.6.73;initial catalog=FoodCourtDB;user id=foodAdmin;password=food123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="FoodCourtDBEntities" connectionString="metadata=res://*/Models.FoodStreetModel.csdl|res://*/Models.FoodStreetModel.ssdl|res://*/Models.FoodStreetModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.1.6.73;initial catalog=FoodCourtDB;user id=foodAdmin;password=food123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
