--- a/task03_0606/packages.config
+++ b/task03_0606/packages.config
@@ -14,4 +14,5 @@
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Wahid-SweetAlert2" version="1.0.0" targetFramework="net461" />
 </packages>
