--- a/task03_0606/packages.config
+++ b/task03_0606/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.zh-Hant" version="6.1.3" targetFramework="net461" />
+  <package id="HtmlAgilityPack" version="1.8.4" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.3" targetFramework="net461" />
