--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -53,6 +53,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.8.4.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.8.4\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -100,6 +104,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="0620producttablecreate.txt" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\E13.jpg" />
@@ -157,6 +162,46 @@
       <DependentUpon>FoodStreetModel.edmx</DependentUpon>
       <LastGenOutput>FoodStreetModel.cs</LastGenOutput>
     </Content>
+    <Content Include="photo\E1.jpg" />
+    <Content Include="photo\E10.jpg" />
+    <Content Include="photo\E11.jpg" />
+    <Content Include="photo\E12.jpg" />
+    <Content Include="photo\E13.jpg" />
+    <Content Include="photo\E2.jpg" />
+    <Content Include="photo\E26.jpg" />
+    <Content Include="photo\E27.jpg" />
+    <Content Include="photo\E28.jpg" />
+    <Content Include="photo\E29.jpg" />
+    <Content Include="photo\E3.jpg" />
+    <Content Include="photo\E30.jpg" />
+    <Content Include="photo\E31.jpg" />
+    <Content Include="photo\E32.jpg" />
+    <Content Include="photo\E33.jpg" />
+    <Content Include="photo\E34.jpg" />
+    <Content Include="photo\E35.jpg" />
+    <Content Include="photo\E36.jpg" />
+    <Content Include="photo\E37.jpg" />
+    <Content Include="photo\E38.jpg" />
+    <Content Include="photo\E39.jpg" />
+    <Content Include="photo\E4.jpg" />
+    <Content Include="photo\E5.jpg" />
+    <Content Include="photo\E6.jpg" />
+    <Content Include="photo\E7.jpg" />
+    <Content Include="photo\E8.jpg" />
+    <Content Include="photo\E9.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E27.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E36.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E37.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E38.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E39.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E28.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E29.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E30.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E31.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E32.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E33.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E34.jpg" />
+    <Content Include="photo\NewFolder1\6\new\E35.jpg" />
     <Content Include="vendor\bootstrap\css\bootstrap-grid.css" />
     <Content Include="vendor\bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="vendor\bootstrap\css\bootstrap-reboot.css" />
@@ -216,19 +261,6 @@
     <Content Include="photo\A7.jpg" />
     <Content Include="photo\A8.jpg" />
     <Content Include="photo\A9.jpg" />
-    <Content Include="photo\E1.jpg" />
-    <Content Include="photo\E10.jpg" />
-    <Content Include="photo\E11.jpg" />
-    <Content Include="photo\E12.jpg" />
-    <Content Include="photo\E13.jpg" />
-    <Content Include="photo\E2.jpg" />
-    <Content Include="photo\E3.jpg" />
-    <Content Include="photo\E4.jpg" />
-    <Content Include="photo\E5.jpg" />
-    <Content Include="photo\E6.jpg" />
-    <Content Include="photo\E7.jpg" />
-    <Content Include="photo\E8.jpg" />
-    <Content Include="photo\E9.jpg" />
     <Content Include="photo\C1.jpg" />
     <Content Include="photo\C10.jpg" />
     <Content Include="photo\C11.jpg" />
@@ -315,7 +347,7 @@
     <Compile Include="Models\CLayoutChoose.cs" />
     <Compile Include="Models\CUserList.cs" />
     <Compile Include="Models\FoodCategories.cs" />
-    <Compile Include="Models\FoodProducts.cs" />
+    <Compile Include="Models\FoodProduct.cs" />
     <Compile Include="Models\Cart\Cart.cs" />
     <Compile Include="Models\Cart\CartItem.cs" />
     <Compile Include="Models\Cart\Operation.cs" />
@@ -478,10 +510,7 @@
     <Content Include="Views\Products\Noodleproducts.cshtml" />
     <Content Include="Views\Products\Riceproducts.cshtml" />
     <Content Include="Views\Products\Fastfoodproducts.cshtml" />
-    <Content Include="Views\Products\Edit.cshtml" />
     <Content Include="Views\Products\ManagerIndex.cshtml" />
-    <Content Include="Views\Products\Create.cshtml" />
-    <Content Include="Views\Products\test.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
@@ -494,6 +523,8 @@
     <Content Include="Views\Home\RestaurentMemberPage.cshtml" />
     <Content Include="Views\Order\Order_list_history_bussiness.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Products\Create.cshtml" />
+    <Content Include="Views\Products\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -503,7 +534,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="photo\NewFolder1\6\" />
     <Folder Include="startbootstrap-sb-admin-gh-pages\" />
   </ItemGroup>
   <ItemGroup>
