--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -274,33 +274,6 @@
     <Content Include="SweetAlert2\SweetAlert.js" />
     <Content Include="SweetAlert2\sweetalert2.js" />
     <Content Include="test111.html" />
-    <Content Include="vendor\bootstrap\css\bootstrap-grid.css" />
-    <Content Include="vendor\bootstrap\css\bootstrap-grid.min.css" />
-    <Content Include="vendor\bootstrap\css\bootstrap-reboot.css" />
-    <Content Include="vendor\bootstrap\css\bootstrap-reboot.min.css" />
-    <Content Include="vendor\bootstrap\css\bootstrap.css" />
-    <Content Include="vendor\bootstrap\css\bootstrap.min.css" />
-    <Content Include="vendor\bootstrap\js\bootstrap.bundle.js" />
-    <Content Include="vendor\bootstrap\js\bootstrap.bundle.min.js" />
-    <Content Include="vendor\bootstrap\js\bootstrap.js" />
-    <Content Include="vendor\bootstrap\js\bootstrap.min.js" />
-    <Content Include="vendor\chart.js\Chart.bundle.js" />
-    <Content Include="vendor\chart.js\Chart.bundle.min.js" />
-    <Content Include="vendor\chart.js\Chart.js" />
-    <Content Include="vendor\chart.js\Chart.min.js" />
-    <Content Include="vendor\datatables\dataTables.bootstrap4.css" />
-    <Content Include="vendor\datatables\dataTables.bootstrap4.js" />
-    <Content Include="vendor\datatables\jquery.dataTables.js" />
-    <Content Include="vendor\font-awesome\css\font-awesome.css" />
-    <Content Include="vendor\font-awesome\css\font-awesome.min.css" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.svg" />
-    <Content Include="vendor\jquery-easing\jquery.easing.compatibility.js" />
-    <Content Include="vendor\jquery-easing\jquery.easing.js" />
-    <Content Include="vendor\jquery-easing\jquery.easing.min.js" />
-    <Content Include="vendor\jquery\jquery.js" />
-    <Content Include="vendor\jquery\jquery.min.js" />
-    <Content Include="vendor\jquery\jquery.slim.js" />
-    <Content Include="vendor\jquery\jquery.slim.min.js" />
     <Content Include="js\Aindex.js" />
     <Content Include="js\bootstrap.bundle.js" />
     <Content Include="js\bootstrap.bundle.min.js" />
@@ -337,10 +310,6 @@
     <Content Include="js\jquery-3.3.1.min.js" />
     <Content Include="js\popper.min.js" />
     <Content Include="note.txt" />
-    <Content Include="picture\1602181123510000001.jpg" />
-    <Content Include="picture\1608031409360000001.jpg" />
-    <Content Include="picture\1610141734150000001.jpg" />
-    <Content Include="picture\1805211154480000001.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -469,48 +438,6 @@
     <Content Include="Views\Member\Register.cshtml" />
     <Content Include="Views\Member\ForgotPassword.cshtml" />
     <Content Include="Views\_Member_SuperUser_LayoutPage1.cshtml" />
-    <Content Include="vendor\bootstrap\css\bootstrap.css.map" />
-    <Content Include="vendor\bootstrap\css\bootstrap.min.css.map" />
-    <Content Include="vendor\bootstrap\js\bootstrap.bundle.js.map" />
-    <Content Include="vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
-    <Content Include="vendor\bootstrap\js\bootstrap.js.map" />
-    <Content Include="vendor\bootstrap\js\bootstrap.min.js.map" />
-    <Content Include="vendor\font-awesome\css\font-awesome.css.map" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <Content Include="vendor\font-awesome\fonts\FontAwesome.otf" />
-    <Content Include="vendor\font-awesome\less\animated.less" />
-    <Content Include="vendor\font-awesome\less\bordered-pulled.less" />
-    <Content Include="vendor\font-awesome\less\core.less" />
-    <Content Include="vendor\font-awesome\less\fixed-width.less" />
-    <Content Include="vendor\font-awesome\less\font-awesome.less" />
-    <Content Include="vendor\font-awesome\less\icons.less" />
-    <Content Include="vendor\font-awesome\less\larger.less" />
-    <Content Include="vendor\font-awesome\less\list.less" />
-    <Content Include="vendor\font-awesome\less\mixins.less" />
-    <Content Include="vendor\font-awesome\less\path.less" />
-    <Content Include="vendor\font-awesome\less\rotated-flipped.less" />
-    <Content Include="vendor\font-awesome\less\screen-reader.less" />
-    <Content Include="vendor\font-awesome\less\stacked.less" />
-    <Content Include="vendor\font-awesome\less\variables.less" />
-    <Content Include="vendor\font-awesome\scss\font-awesome.scss" />
-    <Content Include="vendor\font-awesome\scss\_animated.scss" />
-    <Content Include="vendor\font-awesome\scss\_bordered-pulled.scss" />
-    <Content Include="vendor\font-awesome\scss\_core.scss" />
-    <Content Include="vendor\font-awesome\scss\_fixed-width.scss" />
-    <Content Include="vendor\font-awesome\scss\_icons.scss" />
-    <Content Include="vendor\font-awesome\scss\_larger.scss" />
-    <Content Include="vendor\font-awesome\scss\_list.scss" />
-    <Content Include="vendor\font-awesome\scss\_mixins.scss" />
-    <Content Include="vendor\font-awesome\scss\_path.scss" />
-    <Content Include="vendor\font-awesome\scss\_rotated-flipped.scss" />
-    <Content Include="vendor\font-awesome\scss\_screen-reader.scss" />
-    <Content Include="vendor\font-awesome\scss\_stacked.scss" />
-    <Content Include="vendor\font-awesome\scss\_variables.scss" />
-    <Content Include="vendor\jquery\jquery.min.map" />
-    <Content Include="vendor\jquery\jquery.slim.min.map" />
     <Content Include="Views\Member\Logout.cshtml" />
     <Content Include="Views\Member\OrderTable.cshtml" />
     <Content Include="Views\Member\EditPersonalData.cshtml" />
@@ -573,6 +500,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="picture\" />
     <Folder Include="scss\" />
     <Folder Include="startbootstrap-sb-admin-gh-pages\" />
   </ItemGroup>
